Fix dashboard card alignment

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -269,12 +269,12 @@ body > * {
     transform: scale(1.05);
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
     .card-img-top {
         height: auto;
         width: 70vw;
     }
-}
+} */
 
 /* Sponsors */
 
@@ -480,8 +480,3 @@ body > * {
 input[type=search]:focus {
     box-shadow: 0 0 0 .25rem #9ecacc;
 }
-#f4f4f4
-/* Gray */
-
-body text color
-#26484a
